# songscore

./: .gitignore  Actions.hs  CHANGELOG.md  Cargo.toml  Dao.hs  LAUNCH.sh  LICENSE  MANIFEST.in  Main.hs  Models.hs  Procfile  README.md  Songscore.hs  app.py  classes.php  connect.php  database.db  database.py  elixir_buildpack.config  getfeed.php  go.mod  go.sum  image.go  index.html  index.php  main.go  mix.exs  models.go  requirements.txt  routes.go  schema.sql  script.js  setup.py  songscore-api.cabal  spotify.go  stylesheet.css  submit.php  user.php  web.go
config/: config.exs
lib/: songscore.ex  songscore_web.ex
lib/songscore/: application.ex  comment.ex  notification.ex  repo.ex  review.ex  subject.ex  user.ex
lib/songscore_web/: auth_controller.ex  notification_controller.ex  review_controller.ex  router.ex  spotify_token.ex  subject_controller.ex  token.ex  user_controller.ex
priv/static/: index.html  main.js
songscore/: __init__.py  schema.sql  songscore.py
songscore/static/: feed.js  newreviewform.js  script.js  stylesheet.css
songscore/templates/: 404.html  base.html  comments.html  dislikes.html  error.html  feed.html  followers.html  following.html  layout.html  likes.html  login.html  notifications.html  profile.html  register.html  reviews.html  user.html  (+1 more)
songscore_api/: __init__.py  app.py  models.py  resources.py  schema.py
src/: main.rs
static/: index.js  newreviewbox.js  newreviewform.js  reviewbox.js  stylesheet.css
templates/: feed.html  index.html  layout.html  newreviewbox.html  profile.html  register.html  reviewbox.html
(+25 files in other folders)
