[package]
name = "songscore"
version = "0.1.0"
authors = ["angusjf <el17ajf@leeds.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_cors = "0.5.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
